# openplazma

./: .gitignore  AGENTS.md  README.md  pack-manifest.json  package.json  pnpm-lock.yaml  tsconfig.base.json
.agent-org/: artifact-policy.md  carrier-invocation.md  execution-substrate.md  intake-template.md  pack-materialization.md  pack-version  run-lifecycle.md  runtime-registry.yaml  tool-io-substrate.md  worktree-policy.md
.claude/: settings.json
.codex/: config.toml
bootstrap/: README.md  codex-bootstrap.md
docs/: README.md  feedback-intake.md  guided-study-flow.md  investigation-model.md  investigation-session-api.md  known-issues.md  local-signal-import.md  notebook-tracking-integration.md  (+9 more)
python/openplazma/: pyproject.toml
python/openplazma/openplazma/: __init__.py  _json.py  _validation.py  context.py  fixtures.py  investigations.py  local_array.py  local_signal.py  mhd.py  mhd_analysis.py  observation_lineage.py  observatory.py  plotting.py  public_data.py  public_observation_campaign.py  records.py  runstore.py  signals.py  sources.py  tasks.py
python/openplazma/tests/: test_context.py  test_fixtures.py  test_investigations.py  test_json_io.py  test_local_signal_import.py  test_mhd.py  test_notebook_tracking.py  test_observatory.py  test_pages_build.py  test_plotting.py  test_public_data_and_signal_index.py  test_public_observation_campaign.py  test_public_observation_lineage_audit.py  test_records.py  test_release_prep.py  test_runstore.py  test_tasks.py  test_teacher_kit.py  test_tutorials.py  test_workbench_lite.py  test_workshop_pack.py
(+203 files in other folders)
