[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openplazma"
version = "0.2.0"
description = "Python bridge for OpenPlazma read-only signal analysis records."
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8"
]

[project.optional-dependencies]
dev = [
  "pytest>=8"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["openplazma*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
